--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@ $DarkCyan: hsl(192, 100%, 9%);
 $GrayishBlue: hsl(208, 11%, 55%);
 // font-size
 $h3-size: 26px;
-$h2-size: 30px;
+$h2-size: 33px;
 
 // templates
 %flex-sb {
@@ -33,6 +33,7 @@ $h2-size: 30px;
 %heading {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
+  color: #000;
 }
 
 // mixins
@@ -101,6 +102,7 @@ a {
 }
 main {
   @extend %flex-center;
+  position: relative;
 }
 .inner {
   @extend %flex-center;
@@ -138,6 +140,29 @@ main {
     padding-left: 30px;
   }
 }
+.call-to-action {
+  @include size(800px, 280px);
+  @extend %flex-center;
+  background-color: #fff;
+  flex-direction: column;
+  box-shadow: 0 0px 10px 0.5px transparentize($GrayishBlue, 0.8);
+  border-radius: 10px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -435px;
+
+  h2 {
+    @extend %heading;
+    font-size: $h2-size;
+    padding-bottom: 45px;
+  }
+  & > .btn-pink {
+    @include size(50%, 80px);
+    font-size: 16px;
+  }
+}
+
 footer {
   width: 100%;
   background-color: $DarkCyan;
@@ -170,6 +195,10 @@ footer {
   li {
     padding-left: 25px;
     padding-bottom: 30px;
+  }
+  & > a {
+    display: table-cell;
+    vertical-align: middle;
   }
   .location {
     list-style-image: url(../images/icon-location.svg);
