--- a/scss/style.scss
+++ b/scss/style.scss
@@ -114,8 +114,7 @@ main {
 }
 .infoblock {
   @extend %flex-sb;
-  @include size(1230px, 440px);
-  // margin-bottom: 40px;
+  width: 100%;
   padding: 60px 30px 60px 120px;
   border-radius: 10px;
   box-shadow: 0 0px 10px 0.5px transparentize($GrayishBlue, 0.8);
@@ -138,7 +137,7 @@ main {
 }
 .infoblock + .infoblock {
   margin-top: 40px;
-} 
+}
 .infoblock-reverse {
   flex-direction: row-reverse;
 
@@ -250,8 +249,6 @@ footer {
     margin-right: 0px;
   }
 }
-
-//
 .attribution {
   font-size: 11px;
   text-align: center;
