--- a/scss/style.scss
+++ b/scss/style.scss
@@ -114,7 +114,8 @@ main {
 }
 .infoblock {
   @extend %flex-sb;
-  width: 100%;
+  @include size(1230px, 440px);
+  // margin-bottom: 40px;
   padding: 60px 30px 60px 120px;
   border-radius: 10px;
   box-shadow: 0 0px 10px 0.5px transparentize($GrayishBlue, 0.8);
@@ -143,7 +144,7 @@ main {
 
   & .infoblock__content {
     padding-right: 0;
-    padding-left: 30px;
+    padding-left: 43px;
   }
 }
 .call-to-action {
@@ -182,6 +183,7 @@ footer {
   }
   .logo-bottom {
     margin-bottom: 40px;
+    padding-left: 5px;
   }
   .content {
     display: flex;
@@ -249,6 +251,8 @@ footer {
     margin-right: 0px;
   }
 }
+
+//
 .attribution {
   font-size: 11px;
   text-align: center;
